--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -340,3 +340,21 @@ small.text-muted {
 {
   width: 400px;
 }
+
+#deletephoto {
+    position: relative;
+    float:left;
+    margin:5px;}
+
+#deletephoto:hover button
+  {
+  display: block;
+  float: right;
+  }
+
+#deletephoto button {
+    position:absolute;
+    top:0;
+    left:0;
+    display:none;
+}
